deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scum-deployment
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: scum

  template:
    metadata:
      name: scum
      labels:
        app: scum
    spec:
      containers:
        - name: scum
          image: ihippik/k8s-scum:main
          args:
            - "server"
          ports:
            - containerPort: 8080
