deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scum-srv
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    kind: scum
