deploy/service_node_port.yml
apiVersion: v1
kind: Service
metadata:
  name: scum-srv-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
  selector:
    kind: scum
