deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scum
spec:
  rules:
    - host: scum-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scum-srv-node-port
                port:
                  number: 80
